--- a/miao/mi/viewpager-box.css
+++ b/miao/mi/viewpager-box.css
@@ -15,6 +15,7 @@ main {
     height: 460px;
     min-width: 1226px;
     display: inline-block;
+    overflow: hidden;
 }
 
 aside {
@@ -34,17 +35,14 @@ aside {
     width: 100%;
     height: 420px;
     list-style: none;
-    xposition: relative;
 }
 
 .aside-list>li {
-    xposition: relative;
     width: 100%;
     height: 10%;
 }
 
 .aside-list-box {
-    xposition: relative;
     width: 100%;
     height: 100%;
 }
@@ -139,6 +137,7 @@ aside {
     position: absolute;
     left: 0;
     display: inline-block;
+    opacity: 0;
     visibility: hidden;
 }
 
@@ -172,7 +171,6 @@ aside {
 
 .viewpager>label:hover {
     background: rgba(129, 140, 146, 1);
-    ;
 }
 
 .viewpager input:nth-child(n):checked+label {
@@ -180,22 +178,32 @@ aside {
 }
 
 .viewpager input:nth-of-type(1):checked~.p1 {
+    opacity: 1;
+    transition: 1s;
     visibility: visible;
 }
 
 .viewpager input:nth-of-type(2):checked~.p2 {
+    opacity: 1;
+    transition: 1s;
     visibility: visible;
 }
 
 .viewpager input:nth-of-type(3):checked~.p3 {
+    opacity: 1;
+    transition: 1s;
     visibility: visible;
 }
 
 .viewpager input:nth-of-type(4):checked~.p4 {
+    opacity: 1;
+    transition: 1s;
     visibility: visible;
 }
 
 .viewpager input:nth-of-type(5):checked~.p5 {
+    opacity: 1;
+    transition: 1s;
     visibility: visible;
 }
 
@@ -284,4 +292,62 @@ aside {
 
 #left:hover, #right:hover {
     background: rgba(0, 0, 0, 0.6);
+}
+
+/* 产品广告栏Product-adbar */
+
+.Product-adbar {
+    font-size: 14px;
+    width: 1226px;
+    height: 170px;
+    margin-top: 15px;
+    text-align: center;
+    display: inline-block;
+}
+/* 用户工具栏 */
+.user-tools{
+    width: 230px;
+    height: 100%;
+    display: inline-block;
+    float: left;
+    background: #5F5750;
+}
+.user-tools>span{
+    float: left;
+    margin: 0;
+    width: calc(100% / 3);
+    height: 50%;
+    display: inline-block;
+    padding: 10px;
+    box-sizing: border-box;
+}
+.user-tools a{
+    cursor: pointer;
+    font-size: 12px;
+    color: rgba(255,255,255,0.7);
+}
+.user-tools a:hover{
+    color: rgba(255,255,255,1)
+}
+/* 三个广告 */
+.Product-adbar #ad1,#ad2,#ad3{
+    float: left;
+    margin: 0;
+    height: 100%;
+    width: calc( (100% - 230px - 45px) / 3);
+    display: inline-block;
+    margin-left: 15px;
+    background-size: 100%;
+}
+#ad1{
+    background-image:url(./img/ad1.jpg);
+    
+}
+#ad2{
+    background-image:url(./img/ad2.jpg);
+    
+}
+#ad3{
+    background-image:url(./img/ad3.jpg);
+    
 }
