更换图片链接为小米地址

--- a/miao/mi/main.css
+++ b/miao/mi/main.css
@@ -340,14 +340,14 @@ aside {
     background-size: 100%;
 }
 #ad1{
-    background-image:url(./img/ad1.jpg);
+    background-image:url(https://i1.mifile.cn/a4/xmad_1559319039848_CQefl.jpg);
     
 }
 #ad2{
-    background-image:url(./img/ad2.jpg);
+    background-image:url(https://i1.mifile.cn/a4/xmad_15589747473883_mCjDP.jpg);
     
 }
 #ad3{
-    background-image:url(./img/ad3.jpg);
+    background-image:url(https://i1.mifile.cn/a4/xmad_15591870612933_eyMJK.jpg);
     
 }
