--- a/miao/mi/main.css
+++ b/miao/mi/main.css
@@ -8,14 +8,24 @@ main {
     min-width: 1226px;
     text-align: center;
     box-sizing: border-box;
+    position: relative;
 }
 
 .viewpager-box {
     width: 1226px;
     height: 460px;
     min-width: 1226px;
-    display: inline-block;
+    margin: auto;
+    xdisplay: inline-block;
     overflow: hidden;
+    position: relative;
+    
+    /* font-size: 14px;
+    xwidth: 1226px;
+    height: 170px;
+    margin: 15px 0 25px 0;
+    text-align: center;
+    display: inline-block; */
 }
 
 aside {
@@ -27,7 +37,8 @@ aside {
     display: inline-block;
     float: left;
     z-index: 1;
-    position: relative;
+    left: 0;
+    position: absolute;
 }
 
 .aside-list {
@@ -122,8 +133,8 @@ aside {
 
 .viewpager {
     position: relative;
-    left: 0;
-    top: -460px;
+    left: 0px;
+    top: 0px;
     width: 1226px;
     height: 460px;
     z-index: 0;
@@ -298,21 +309,24 @@ aside {
 
 .Product-adbar {
     font-size: 14px;
-    width: 1226px;
+    xwidth: 1226px;
     height: 170px;
-    margin-top: 15px;
+    margin: 15px 0 25px 0;
     text-align: center;
     display: inline-block;
 }
+
 /* 用户工具栏 */
-.user-tools{
+
+.user-tools {
     width: 230px;
     height: 100%;
     display: inline-block;
     float: left;
     background: #5F5750;
 }
-.user-tools>span{
+
+.user-tools>span {
     float: left;
     margin: 0;
     width: calc(100% / 3);
@@ -321,33 +335,99 @@ aside {
     padding: 10px;
     box-sizing: border-box;
 }
-.user-tools a{
+
+.user-tools a {
     cursor: pointer;
     font-size: 12px;
-    color: rgba(255,255,255,0.7);
+    color: rgba(255, 255, 255, 0.7);
 }
-.user-tools a:hover{
-    color: rgba(255,255,255,1)
+
+.user-tools a:hover {
+    color: rgba(255, 255, 255, 1)
 }
+
 /* 三个广告 */
-.Product-adbar #ad1,#ad2,#ad3{
+
+.Product-adbar #ad1, #ad2, #ad3 {
     float: left;
     margin: 0;
     height: 100%;
-    width: calc( (100% - 230px - 45px) / 3);
+    width:316px;
     display: inline-block;
     margin-left: 15px;
     background-size: 100%;
 }
-#ad1{
-    background-image:url(https://i1.mifile.cn/a4/xmad_1559319039848_CQefl.jpg);
-    
+
+#ad1 {
+    background-image: url(https://i1.mifile.cn/a4/xmad_1559319039848_CQefl.jpg);
 }
-#ad2{
-    background-image:url(https://i1.mifile.cn/a4/xmad_15589747473883_mCjDP.jpg);
-    
+
+#ad2 {
+    background-image: url(https://i1.mifile.cn/a4/xmad_15589747473883_mCjDP.jpg);
 }
-#ad3{
-    background-image:url(https://i1.mifile.cn/a4/xmad_15591870612933_eyMJK.jpg);
-    
+
+#ad3 {
+    background-image: url(https://i1.mifile.cn/a4/xmad_15591870612933_eyMJK.jpg);
+}
+
+/* 横幅广告 */
+
+.Banner-ad {
+    xwidth: 1226px;
+    height: 120px;
+    margin: auto auto 45px auto;
+    display: inline-block;
+}
+.Banner-ad img{
+    width: 1226px;
+    height: 120px;
+}
+
+/* 鼠标下拉页 */
+
+.page-main {
+    min-width: 1226px;
+    position: relative;
+    background-color: #F5F5F5;
+    padding-top: 32px;
+}
+/*用一个盒子来装内容*/
+.phone{
+
+}
+/*下拉页标题*/
+.page-title {
+    width: 1226px;
+    height: 58px;
+    margin: auto;
+}
+.page-title h2{
+    margin: 0;
+    font-size: 22px;
+    font-weight: 200;
+    line-height: 58px;
+    color: #333;
+    float: left;
+    display: inline-block
+}
+.page-title .more{
+    float: right;
+    width: 92px;
+    height: 100%;
+    display: inline-block;
+}
+.more a{
+    font-size: 16px;
+    line-height: 58px;
+    color: #424242;
+    -webkit-transition: all .4s;
+    transition: all .4s;
+}
+.more a:hover{
+    color: #FF6700;
+}
+.phone-box{
+    width: 1226px;
+    height: 628px;
+    margin: auto;
 }
