--- a/miao/mi/top.css
+++ b/miao/mi/top.css
@@ -9,12 +9,12 @@ body {
     font: 14px/1.5 "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei", "Hiragino Sans GB", "Heiti SC", "WenQuanYi Micro Hei", sans-serif;
     color: #333;
     background-color: #fff;
+    margin: 0;
+    position: relative;
     min-width: 1226px;
-    overflow-x:hidden
 }
 
 .conetent {
-    width: 1920px;
     min-width: 1226px;
 }
 
@@ -200,7 +200,6 @@ a:link, a:visited {
     left: -347px;
     position: absolute;
     top: 100px;
-    width: 1920px;
     height: 230px;
     min-width: 1226px;
     background-color: #ffffff;
@@ -285,4 +284,3 @@ a:link, a:visited {
     line-height: 20px;
     color: #ff6700;
 }
-
