--- a/miao/mi/main.css
+++ b/miao/mi/main.css
@@ -388,7 +388,7 @@ aside {
 
 /* 鼠标下拉页 */
 
-.page-main{
+.page-main {
     min-width: 1226px;
     position: relative;
     background-color: #F5F5F5;
@@ -408,6 +408,7 @@ aside {
     width: 1226px;
     height: 58px;
     margin: auto;
+    position: relative;
 }
 
 .page-title h2 {
@@ -443,6 +444,7 @@ aside {
     width: 1226px;
     margin: auto;
     display: inline-block;
+    overflow: hidden;
 }
 
 .phone-adbox {
@@ -451,18 +453,17 @@ aside {
 
 .phone-ad img {
     width: 234px;
-    height: 614px;
+    height: 621px;
 }
 
 .phone-box {
     width: calc(1226px - 234px);
     height: 628px;
     float: right;
-
 }
-.phone-ul{
 
-}
+.phone-ul {}
+
 .phone-ul li {
     xfloat: left;
     width: 234px;
@@ -474,7 +475,8 @@ aside {
     display: inline-block;
     padding: 20px 0 20px 0;
 }
-.flagstate{
+
+.flagstate {
     position: absolute;
     top: 0;
     left: 50%;
@@ -488,26 +490,31 @@ aside {
     color: #fff;
     display: inline-block;
 }
-.flagstate.new{
+
+.flagstate.new {
     background-color: #83c44e;
 }
-.flagstate.old{
+
+.flagstate.old {
     background-color: #E53935;
 }
-.phone-ul  a img {
+
+.phone-ul a img {
     width: 160px;
     height: 160px;
     margin-top: -20px;
     display: inline-block;
 }
-.phone-ul  a {
+
+.phone-ul a {
     font-size: 14px;
     width: 214px;
     height: 20px;
     margin-top: 20px;
     display: inline-block;
 }
-.desc{
+
+.desc {
     margin: 0 10px 10px;
     height: 18px;
     font-size: 12px;
@@ -517,12 +524,14 @@ aside {
     overflow: hidden;
     color: #b0b0b0;
 }
-.phone-price{
-    font-size:14px;
+
+.phone-price {
+    font-size: 14px;
     text-align: center;
     color: #ff6700;
     margin: 0 10px 14px;
 }
+
 .page-main ul li {
     background-color: #FFFFFF;
     transition: 0.3s;
@@ -530,7 +539,54 @@ aside {
 
 .page-main ul li:hover {
     margin-top: -3px;
-    top:-3px;
+    top: -3px;
     box-shadow: 5px 5px 20px -5px rgba(176, 176, 176, 0.6), -5px 5px 20px -5px rgba(176, 176, 176, 0.6);
     transition: 0.3s;
+}
+
+.page-ad {
+    margin-left: auto;
+    margin-right: auto;
+    margin: 28px 0 22px;
+    xtext-align: center;
+    display: inline-block;
+}
+
+.page-ad img {
+    width: 1226px;
+    height: 120px;
+}
+
+.title-kind {
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+.title-kind ul {
+    margin: 0;
+    padding: 16px 0 0;
+    list-style-type: none;
+    font-size: 16px;
+}
+
+.title-kind ul li {
+    background-color: #f5f5f5;
+    color: black;
+    margin: 0;
+    margin-left: 30px;
+    display: inline-block;
+}
+.title-kind ul li:hover{
+    box-shadow: none;
+}
+
+.title-kind a {
+    color: black;
+}
+
+.title-kind a:hover {
+    transition: all 0.3s;
+    color: #FF6700;
+    border-bottom: 2px solid #FF6700;
 }
