--- a/miao/mi/main.css
+++ b/miao/mi/main.css
@@ -637,3 +637,18 @@ aside {
     box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
     transform: translate3d(0,-2px,0);
 }
+.commodity-span ul li{
+    float: left;
+    font-size: 14px;
+    background-color: #ffffff;
+    transition: 0.3s;
+    margin-left: 14px;
+    margin-bottom: 14px;
+    box-sizing: border-box;
+    position: relative;
+    display: inline-block;
+    padding: 20px 0 20px 0;
+}
+.commodity-span li img{
+    width: 150px;
+}
