--- a/miao/mi/main.css
+++ b/miao/mi/main.css
@@ -411,7 +411,7 @@ aside {
     position: relative;
 }
 
-.page-title h2 {
+ h2 {
     margin: 0;
     font-size: 22px;
     font-weight: 200;
@@ -679,61 +679,69 @@ aside {
     width: 234px;
     height: 93px;
     padding: 50px 0 0 0;
-    box-sizing:unset;
+    box-sizing: unset;
     xdisplay: inline-block;
 }
-.span_last_img{
+
+.span_last_img {
     position: absolute;
     right: 20px;
     top: 32px;
     width: 80px;
     height: 80px;
 }
+
 .span_last_img img {
     width: 100%;
     height: 100%;
 }
-.span_last_title{
+
+.span_last_title {
     margin: -10px 100px 5px 30px;
     font-size: 14px;
     font-weight: 400;
 }
+
 .span_last_img~p {
-   font-size: 12px;
-   margin: 0 110px 0 0;
-   display: block;
+    font-size: 12px;
+    margin: 0 110px 0 0;
+    display: block;
 }
-.span_more{
+
+.span_more {
     position: absolute;
     right: 35px;
     top: 48px;
     width: 48px;
     height: 48px;
 }
-.span_more a{
+
+.span_more a {
     font-size: 48px;
     color: #FF6700;
 }
-.title_more{
+
+.title_more {
     display: block;
     margin: 0 110px 0 30px;
     font-size: 18px;
     color: #333;
     text-align: left;
 }
-.title_more small{
+
+.title_more small {
     display: block;
     font-size: 12px;
     color: #757575;
     text-align: left;
 }
-.span_bottom{
+
+.span_bottom {
     position: absolute;
     bottom: 0;
     left: 0;
     z-index: 10;
     width: 234px;
-
     height: 0;
     overflow: hidden;
     font-size: 12px;
@@ -743,24 +751,56 @@ aside {
     -webkit-transition: all .2s linear;
     transition: all .2s linear;
 }
-.span_comment{
+
+.span_comment {
     padding: 10px 35px 5px 30px;
     font-size: 12px;
     color: #F5F5F5;
     text-align: left;
 }
-.span_user{
+
+.span_user {
     padding: 0 35px 5px 30px;
     font-size: 12px;
     color: #ffc299;
     text-align: left;
 }
-.commodity-span li:hover{
+
+.commodity-span li:hover {
     box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
     transform: translate3d(0, -2px, 0);
 }
-.commodity-span li:hover .span_bottom{
+
+.commodity-span li:hover .span_bottom {
     overflow: visible;
     opacity: 1;
     height: 76px;
+}
+.page-switch {
+    width: 1226px;
+    background-color: #F5F5F5;
+    margin: auto;
+    position: relative;
+    overflow: hidden;
+}
+.page-switchbox {
+    width: 70px;
+    height: 25px;
+    position: absolute;
+    right: 0;
+    top: 15px;
+}
+
+.page-switchbox button {
+    margin: 0;
+    margin-left: -1px;
+    padding: 0;
+    border: 1px solid transparent;
+    outline: none;
+    background-color: #f5f5f5;
+    border: 1px solid #e0e0e0;
+    width: 36px;
+    height: 24px;
+    padding: 5px;
+    text-align: center;
 }
