又是搬砖的一天

--- a/miao/mi/main.css
+++ b/miao/mi/main.css
@@ -411,7 +411,7 @@ aside {
     position: relative;
 }
 
- h2 {
+h2 {
     margin: 0;
     font-size: 22px;
     font-weight: 200;
@@ -776,31 +776,177 @@ aside {
     opacity: 1;
     height: 76px;
 }
-.page-switch {
+
+.page-recommend {
     width: 1226px;
     background-color: #F5F5F5;
     margin: auto;
     position: relative;
     overflow: hidden;
 }
-.page-switchbox {
-    width: 70px;
-    height: 25px;
-    position: absolute;
-    right: 0;
-    top: 15px;
+
+.recommend-switch {
+    width: 1226px;
+    xheight: 320px;
+    xposition: relative;
+    overflow: hidden;
 }
 
-.page-switchbox button {
-    margin: 0;
-    margin-left: -1px;
-    padding: 0;
-    border: 1px solid transparent;
-    outline: none;
-    background-color: #f5f5f5;
-    border: 1px solid #e0e0e0;
+.recommend {
+    xdisplay: block;
+    width: 1226px;
+    white-space: nowrap;
+    transition: 1s;
+    overflow: hidden;
+}
+
+.recommend li {
+
+   xfloat: left;
+    width: 234px;
+    height: 300px;
+    margin: 0 14px 14px 0;
+    background-color: #fff;
+    overflow: hidden;
+    transition: .3s;
+    display: inline-block;
+    display: none;
+}
+
+input[type=radio] {
+    display: none;
+}
+@keyframes hideIndex{
+	0%{ opacity: 0; transform: translate(800px, 0) }
+	100%{opacity: 1; transform: translate(0, 0) }
+}
+.recommend-switch input:nth-of-type(1):checked~ul li:nth-child(-n+5) {
+    display: inline-block;
+    animation: hideIndex 0.3s;
+}
+
+.recommend-switch input:nth-of-type(2):checked~ul li:nth-child(n+6):nth-child(-n+10) {
+    display: inline-block;
+    animation: hideIndex 0.3s;
+}
+
+.recommend-switch input:nth-of-type(3):checked~ul li:nth-child(n+11):nth-child(-n+15) {
+    display: inline-block;
+    animation: hideIndex 0.3s;
+}
+
+.recommend-switch input:nth-of-type(4):checked~ul li:nth-child(n+16):nth-child(-n+20) {
+    display: inline-block;
+    animation: hideIndex 0.3s;
+}
+
+.recommend-switch label {
+    width: 24px;
+    height: 16px;
+    padding: 3px 5px;
+    font-size: 16px;
+    line-height: 16px;
+    display: none;
+}
+
+#check-left {
+    position: absolute;
     width: 36px;
-    height: 24px;
-    padding: 5px;
-    text-align: center;
+    font-size: 16px;
+    right: 50px;
+    top: 16px;
+    border: 1px solid #e0e0e0;
+    margin: 0px;
+}
+
+#check-right {
+    position: absolute;
+    width: 36px;
+    font-size: 16px;
+    right: 14px;
+    top: 16px;
+    border: 1px solid #e0e0e0;
+}
+
+.recommend-switch input:nth-of-type(1):checked~#check-left label:nth-child(1) {
+    color: #e0e0e0;
+    display: block;
+}
+
+.recommend-switch input:nth-of-type(1):checked~#check-right label:nth-child(2) {
+    display: block;
+}
+
+.recommend-switch input:nth-of-type(2):checked~#check-left label:nth-child(1) {
+    display: block;
+}
+
+.recommend-switch input:nth-of-type(2):checked~#check-right label:nth-child(3) {
+    display: block;
+}
+
+.recommend-switch input:nth-of-type(3):checked~#check-left label:nth-child(2) {
+    display: block;
+}
+
+.recommend-switch input:nth-of-type(3):checked~#check-right label:nth-child(4) {
+    display: block;
+}
+
+.recommend-switch input:nth-of-type(4):checked~#check-left label:nth-child(3) {
+    display: block;
+}
+
+.recommend-switch input:nth-of-type(4):checked~#check-right label:nth-child(4) {
+    color: #e0e0e0;
+    display: block;
+}
+
+.recommend li:hover {
+    box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
+    transform: translate3d(0, -3px, 0);
+}
+.recommend-span{
+    padding: 40px 0 15px;
+    height: 100%;
+}
+.recommending-text{
+
+    width: 100%;
+    xheight: 100px;
+    display: inline-block;
+}
+.recommending-text p{
+    width: 100%;
+    line-height: 16px;
+    font-size: 14px;
+    margin: 10px 0 10px 0;
+}
+.hotproduct{
+    width: 1226px;
+    background-color: #F5F5F5;
+    margin: auto;
+    overflow: hidden;
+}
+.hotproduct ul{
+    xwidth: 1226px;
+    overflow: hidden;
+    white-space: nowrap;
+    display: inline-block;
+}
+.hotproduct ul li{
+    position: relative;
+    float: left;
+    width: 296px;
+    height: 415px;
+    margin-right: 14px;
+    margin-bottom: 14px;
+    box-sizing: border-box;
+    background: #fff;
+    transition: all .2s linear;
+    display: inline-block;
+    overflow: hidden;
+}
+.hotproduct ul li:nth-last-child(1){
+    margin-right: 0px;
 }
